Solve the language problem for the text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <div class="row g-4 justify-content-center align-items-center">
         <div class="col-sm-5 text-center text-sm-start">
           <h1>
-            <div class="display-2">مياه شرب مثالية لكل العائلة لأن العائلة هي محور اهتمامكم، ننتج لكم مياه الشرب التي يُعتمد عليها لتلبية كافة احتياجاتكم</div>
+<h1 class="display-2">مياه شرب مثالية</h1>
+<p class="lead">لأن العائلة هي محور اهتمامكم، ننتج لكم مياه الشرب التي يُعتمد عليها لتلبية كافة احتياجاتكم</p>
             <div class="display-5 text-muted">مياه بيرين</div>
           </h1>
           <p class="lead my-4 text-muted"></p>
