--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
    <link href="https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic:wght@400..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
    <title>berain</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">>
   <style>
     section{
       padding: 60px 0;
     }
   </style>
 </head>
-<body>
+<body>  
 
  <!-- navbar -->
   <nav class="navbar navbar-expand-md navbar-light pt-5 pb-4">
@@ -63,9 +63,9 @@
       <div class="row g-4 justify-content-center align-items-center">
         <div class="col-sm-5 text-center text-sm-start">
           <h1>
-<h1 class="display-2">مياه شرب مثالية</h1>
-<p class="lead">لأن العائلة هي محور اهتمامكم، ننتج لكم مياه الشرب التي يُعتمد عليها لتلبية كافة احتياجاتكم</p>
-            <div class="display-5 text-muted">مياه بيرين</div>
+         <h1 class="display-2">مياه شرب مثالية</h1>
+          <p class="lead">لأن العائلة هي محور اهتمامكم، ننتج لكم مياه الشرب التي يُعتمد عليها لتلبية كافة احتياجاتكم</p>
+          <div class="display-5 text-muted">مياه بيرين</div>
           </h1>
           <p class="lead my-4 text-muted"></p>
           <a href="#pricing" class="btn btn-secondary btn-lg">اشتري الان</a>
@@ -84,7 +84,7 @@
     </div>
   </section>
 
-  <!-- pricing plans -->
+  <!-- pricing plans -->    
   <section id="pricing" class="bg-light mt-5">
     <div class="container-lg">
       <div class="text-center">
@@ -462,7 +462,7 @@
   </div>
 
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const tooltips = document.querySelectorAll('.tt')
     tooltips.forEach(t => {
@@ -472,6 +472,6 @@
 </body>
 </html>
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
